2007-09-11  Marcus Brinkmann  <marcus@g10code.de>

	* client.cc (client_t::call_assuan): Send --nohup as argument to
	command.

	* client.h (class client_t): New members decrypt, verify, encrypt,
	and sign.
	* client.cc: Add implementations for these.
	* gpgex.h: Move all ID_CMD_* macros to ...
	* gpgex.cc: ... here.  Add new macros for new commands.
	(gpgex_t::InvokeCommand, gpgex_t::QueryContextMenu): Implement new
	commands.

	* Makefile.am (libgpg-error.a, libassuan.a): Use -f flag with ln.
	* registry.h (default_dir): New prototype.
	* registry.c (default_dir, standard_homedir): New functions.
	* client.cc (default_socket_name): Use default home dir instead
	install directory.

2007-09-05  Marcus Brinkmann  <marcus@g10code.de>

	* gpgex.h (class gpgex_t): Make destructor virtual to silence
	compiler warning.

	* Makefile.am (ICON_NAMES, ICON_SIZES, ICONS): New variables.
	(gpgex_SOURCES): Add $(ICONS).

	* Makefile.am (gpgex_LDADD): More -lws2_32 after ./libassuan.a.
	

2007-09-04  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (AM_CFLAGS, AM_CXXFLAGS): Remove $(GPGME_CFLAGS),
	add $(LIBASSUAN_CFLAGS) and $(GPG_ERROR_CFLAGS).
	(gpgex_SOURCES): Add client.h and client.cc.
	(libgpg-error.a, libassuan.a, clean-local): New targets.
	(gpgex_LDADD): Add ./libassuan.a and ./libgpg-error.a.
	* client.h, client.cc: New files.
	* gpgex.cc: Include client.h.
	(gpgex_t::InvokeCommand): Use client class to implement bunch of
	functionality.
	* main.h: Include <gpg-error.h>.
	(DEBUG_ASSUAN, REGKEY, TRACE_GPGERR): New macros.
	* main.cc: Include <gpg-error.h> and <assuan.h>.
	(REGKEY): Deleted.
	(debug_init): Free filename and add DEBUG_ASSUAN to debug flags.
	(DllMain): Set assuan log stream and prefix, and the error source.

2007-09-03  Marcus Brinkmann  <marcus@g10code.de>

	* bitmaps.h, bitmaps.cc, icons.rc, icon-key-12.bmp,
	icon-key-16.bmp: New files.
	* Makefile.am (gpgex_SOURCES): Add icons.rc, bitmaps.h and
	bitmaps.cc.